fix overlap

--- a/src/routes/about/style.css
+++ b/src/routes/about/style.css
@@ -28,7 +28,7 @@
 
 .aboutSection {
   position: relative;
-  z-index: 100;
+  z-index: 10;
 }
 
 .aboutContent {
